--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
@@ -17,11 +17,12 @@
 
 \begin{frame}{システム $\Gamma$ の生成方法1}
     \begin{itemize}
-        \item チェーン $|\Gamma|$ の数は $[2, n]$ の範囲でランダムに選択され, 各チェーン $\mathcal{C}_{i}$ のコールバック $\left|\mathcal{C}_{i}\right|$ の数は $[2, b]$ の範囲でランダムに選択される
+        \item チェーン $|\Gamma|$ の数は $[2, n]$ の範囲内でランダムに選択される
+        \item 各チェーン $\mathcal{C}_{i}$ のコールバック $\left|\mathcal{C}_{i}\right|$ の数は $[2, b]$ の範囲でランダムに選択される
               \begin{itemize}
-                  \item $n$ と $b$ はパラメータである
+                  \item $n$ と $b$ はパラメータ
               \end{itemize}
-        \item $\mathcal{C}_{i}$ の期間 $T_{i}$ は [50,200] の範囲でランダムに選択され, 相対デッドライン $D_{i}$ は $T_{i}$ に等しくなるように設定される
+        \item $\mathcal{C}_{i}$ の周期 $T_{i}$ は [50,200] の範囲でランダムに選択され, 相対デッドライン $D_{i}$ は $T_{i}$ に等しくなるように設定される
     \end{itemize}
 \end{frame}
 
@@ -74,7 +75,7 @@
 \end{frame}
 
 \begin{frame}{実験方法}
-    本セクションの実験では, 以下の基本設定をして, 実験の各グループで 1 つのパラメーターを変更し, 他のパラメーターは変更しない
+    以下を基本設定とし, 実験の各グループで 1 つのパラメーターを変更し, 他のパラメーターは変更しない
     \begin{itemize}
         \item $m=4$
         \item $n=8$
@@ -120,13 +121,19 @@
     \fullimage{exp_random_m.png}
 \end{frame}
 
-\begin{frame}{結果の考察}
+\begin{frame}{結果の考察1}
     \begin{itemize}
-        \item OUR-2 はさまざまなパラメーター設定の下で一貫して OUR-1 よりも優れており, 比較的大きなギャップがある
-        \item 特に, OUR-2 の結果は SIMU よりも低く, この方法が安全であることを示す
-        \item しかし, SIMU と OUR-2 の間にはまだ余裕がある
-        \item その理由の 1 つは, SIMU が比較的短い時間間隔で測定されるため, 安全な境界ではなないため (シミュレーションには非常に時間がかかり, 妥当なサンプルサイズを維持しながらシミュレーションを長時間実行することはできない)
+        \item OUR-2 は一貫して OUR-1 よりも優れており, 大きな差がある
+        \item OUR-2 の結果は SIMU よりも低く, この方法が安全であることが分かる
     \end{itemize}
+\end{frame}
+
+\begin{frame}{結果の考察2}
+    SIMU と OUR-2 の間にギャップがある
+    \begin{block}{考えられる原因}
+        SIMU が比較的短い時間間隔で測定され, 安全な境界ではないため
+        \notes{シミュレーションには非常に時間がかかり, 妥当なサンプルサイズを維持しながらシミュレーションを長時間実行することはできない}
+    \end{block}
 \end{frame}
 
 \begin{frame}{提案手法の改善余地}
@@ -147,7 +154,7 @@
     \begin{itembox}[l]{\textbf{目的}}
         \begin{itemize}
             \item ケーススタディを使用して分析手法を評価する
-            \item また, シングルスレッドエグゼキュータとマルチスレッドエグゼキュータでのパフォーマンスの違いを実証するための経験的評価を示す
+            \item シングルスレッドエグゼキュータとマルチスレッドエグゼキュータでのパフォーマンスの違いを実証するための経験的評価を示す
         \end{itemize}
     \end{itembox}
 \end{frame}
@@ -162,7 +169,7 @@
     \fitimage{
         \begin{itemize}
             \item ケーススタディの簡単な説明を表に示す
-            \item これらは Choiら~\cite{choi2021picas}が現実的な自動運転システムから開発したサブチェーンを引用
+            \item Choiら~\cite{choi2021picas}が現実的な自動運転システムから開発したサブチェーンを引用
         \end{itemize}
     }{exp_case_study_desc.png}
 \end{frame}
@@ -179,15 +186,15 @@
     \fitimage{
         \begin{itemize}
             \item 全てのコールバックがリエントラントコールバックグループに属すとして, ケーススタディ1による実験結果を表に示す
-            \item マルチスレッドエグゼキュータでスケジューリングされた各チェインの応答時間はシングルスレッドエグゼキュータよりはるかに小さいことがわかる
-            \item さらに, 我々の方法は安全であり, 測定された下限値に近い
+            \item マルチスレッドエグゼキュータでスケジューリングされた各チェインの応答時間はシングルスレッドエグゼキュータよりはるかに小さい
+            \item 観測値が境界を超えることは無く, 境界は測定された下限値に近い
         \end{itemize}
     }{exp_case_study_1.png}
 \end{frame}
 
 \begin{frame}{ケーススタディ2による実験結果}
     \fitimage{
-        全てのコールバックが 同じmutually exclusiveグループに属すとして, 結果を表に示す
+        全てのコールバックが 同じmutually exclusiveグループに属すとして, ケーススタディ2による実験結果を表に示す
     }{exp_case_study_2.png}
 \end{frame}
 
@@ -198,16 +205,22 @@
 \end{frame}
 
 \begin{frame}{観測された問題の原因考察1}
-    \begin{itemize}
-        \item マルチスレッドエグゼキュータの下でコールバックインスタンスがブロックされ, wait\_set から削除される可能性があることが原因と考えられる
-        \item あるコールバックインスタンスを考えた場合, それより優先度の高い ready コールバックインスタンスと一緒に wait\_set に追加される可能性がある
-        \item このとき, 優先度の高いコールバックインスタンスが最初にスケジュールされるため, このコールバックインスタンスはブロックされ, wait\_set から削除される
-        \item この状況が数回繰り返され, このコールバックインスタンスが何度もブロックされる可能性がある
-    \end{itemize}
+    マルチスレッドエグゼキュータの下でコールバックインスタンスがブロックされ, wait\_set から削除される可能性があることが原因と考えられる
+    \vspace{-1mm}
+    \begin{block}{具体例 [マルチスレッドエグゼキュータの場合]}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item あるコールバックインスタンスが, それより高優先度の ready コールバックインスタンスと同時に wait\_set に追加されたケースを考える
+            \item このとき, 高優先度のコールバックインスタンスが最初にスケジュールされるため, このコールバックインスタンスはブロックされ, wait\_set から削除される
+            \item この状況が数回繰り返され, このコールバックインスタンスが何度もブロックされる可能性がある
+        \end{itemize}
+    \end{block}
 \end{frame}
 
 \begin{frame}{観測された問題の原因考察2}
-    対照的に, シングルスレッドエグゼキュータでは, コールバックインスタンスは wait\_set から削除されないため, 同時に wait\_set に追加されていないコールバックインスタンスによってブロックされない
+    \begin{block}{具体例 [シングルスレッドエグゼキュータの場合]}
+        対照的に, シングルスレッドエグゼキュータでは, コールバックインスタンスは wait\_set から削除されないため, 同時に wait\_set に追加されていないコールバックインスタンスによってブロックされない
+    \end{block}
 \end{frame}
 
 \begin{frame}{観測された問題の例}
@@ -224,5 +237,5 @@
 \end{frame}
 
 \begin{frame}{観測された問題からの示唆}
-    マルチスレッドエグゼキュータ上にシステムを実装するとき, または複数のシングルスレッドエグゼキュータからのコールバックをマルチスレッドエグゼキュータにマージするときに, コールバックのコールバックグループの割り当てを慎重に検討する必要がある
+    マルチスレッドエグゼキュータ上にシステムを実装する際に, コールバックのコールバックグループの割り当てを慎重に検討する必要がある
 \end{frame}
