--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/introduction.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/introduction.tex
@@ -6,7 +6,6 @@
 \begin{frame}{背景}
     \begin{itemize}
         \item ROS2 フレームワークにおけるリアルタイムアプリケーションを想定
-        \item ROS 2 のリアルタイム性能を左右するコンポーネントはエグゼキュータ
         \item ROS 2 エグゼキュータのスケジューリング動作は過去の研究とは全く異なり, 新しい分析手法が必要
         \item 最近の研究でシングルスレッドエグゼキュータのモデリングと分析が行われたが, マルチスレッドエグゼキュータは未研究
     \end{itemize}
@@ -14,8 +13,8 @@
 
 \begin{frame}{本論文の貢献}
     \begin{enumerate}
-        \item ROS 2 マルチスレッドエグゼキュータのリアルタイムパフォーマンス分析に\\関する最初の作業を実施
-        \item マルチスレッドエグゼキュータ上に展開される処理チェーンとして\\実装されたシステムのスケジューリングモデルを提示し,\\その応答時間分析手法を開発
+        \item ROS 2 マルチスレッドエグゼキュータのリアルタイムパフォーマンス分析に関する最初の作業を実施
+        \item マルチスレッドエグゼキュータ上に展開される処理チェーンとして実装されたシステムのスケジューリングモデルを提示し,その応答時間分析手法を開発
         \item エグゼキュータのスケジューリング動作による応答時間への影響を調査し, マルチスレッドエグゼキュータのリスクを特定
     \end{enumerate}
 \end{frame}
