--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/prior_knowledge.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/prior_knowledge.tex
@@ -1,6 +1,6 @@
 % !TeX root = main.tex
 
-\section{Prior Knowledge}
+\section{PRIOR KNOWLEDGE}
 \label{sec: prior knowledge}
 
 \begin{frame}{前提知識1}
@@ -8,10 +8,17 @@
         \item \ourl{ROS}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603071/ROS+Robot+Operating+System}
         \item \ourl{ROS2}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683635767/ROS+2+Robot+Operation+System+2}
         \item \ourl{リアルタイム性}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683668573}
+        \item \ourl{ノード}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2697103530}
         \item \ourl{エグゼキュータ}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683373911/Executer}
         \item \ourl{Publish/Subscribeモデル}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2675048610/Publish+Subscribe}
-        \item \ourl{DDS}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603207/DDS+Data+Distribution+Service}
         \item \ourl{コールバック関数}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603231/Callback}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{前提知識2}
+    \begin{itemize}
         \item \ourl{コールバックグループ}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683374043/Callback}
+        \item \ourl{Multi-Threaded Executor のスレッドワークフロー}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2691860470}
+        \item \ourl{動的計画法 (DP)}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2684649943/Dynamic+Programming+DP}
     \end{itemize}
 \end{frame}
