--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
@@ -8,70 +8,80 @@
     \full{
         \begin{table}[tb]
             \adjustbox{max width=\textwidth, max height=\slideheight}{
-                \centering\begin{tabular}{|c|c|} \hline
-                    本論文 & \ch \\\hline
+                \centering\begin{tabular}{|c|c|c|c|c|} \hline
+                                               & ROS & リアルタイム性の保証 & ROS 2 エグゼキュータの分析 & マルチスレッドエグゼキュータ \\\hline
+                    \cite{suzuki2018real}      & \ch &                      &                            &                              \\\hline
+                    \cite{kronauer2021latency} & \ch &                      &                            &                              \\\hline
+                    \cite{yang2020exploring}   & \ch &                      &                            &                              \\\hline
+                    \cite{park2021ros2}        & \ch & \ch                  & \ch                        &                              \\\hline
+                    \cite{tang2020response}    & \ch & \ch                  & \ch                        &                              \\\hline
+                    \cite{blass2021ros}        & \ch & \ch                  & \ch                        &                              \\\hline
+                    \cite{choi2021picas}       & \ch & \ch                  & \ch                        &                              \\\hline
+                    \cite{blass2021automatic}  & \ch & \ch                  & \ch                        &                              \\\hline
+                    本論文                     & \ch & \ch                  & \ch                        & \ch                          \\\hline
                 \end{tabular}
             }
         \end{table}
     }
 \end{frame}
 
+\forme{
+    \begin{frame}{ROS におけるリアルタイムパフォーマンスの向上の既存研究との比較}
+        以下のような研究があるが, 分析的なリアルタイム性の保証はしていない
+        \begin{itemize}
+            \item 透過的な CPU／GPU 連携メカニズムに基づくリアルタイム拡張を提案 \cite{suzuki2018real}
+            \item 分散システムにおける ROS 2 のエンドツーエンドレイテンシを研究 \cite{kronauer2021latency}
+            \item ROS 2 の標準的な rclcpp エグゼキュータ を Callback-group-level エグゼキュータ と呼ばれるリアルタイムエクゼキュータに置き換え, その結果得られる性能を調査 \cite{yang2020exploring}
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{ROS におけるリアルタイムパフォーマンスの向上の既存研究との比較}
-    以下のような研究があるが, 分析的なリアルタイム性の保証はしていない
-    \begin{itemize}
-        \item 透過的な CPU／GPU 連携メカニズムに基づくリアルタイム拡張を提案 \cite{suzuki2018real}
-        \item 分散システムにおける ROS 2 のエンドツーエンドレイテンシを研究 \cite{kronauer2021latency}
-        \item ROS 2 の標準的な rclcpp エグゼキュータ を Callback-group-level エグゼキュータ と呼ばれるリアルタイムエクゼキュータに置き換え, その結果得られる性能を調査 \cite{yang2020exploring}
-    \end{itemize}
-\end{frame}
+    \begin{frame}{ROS 2 エグゼキュータの分析の既存研究1}
+        \begin{itemize}
+            \item Casiniは, ROS 2エグゼキュータの形式的モデリングと解析に関する最初の仕事を行い, シングルスレッドエグゼキュータのスケジューリング動作をモデル化し, その後の解析の基礎を築いた \cite{park2021ros2}
+            \item 応答時間分析技術を改善し, 応答時間を最適化するための優先度割り当て戦略を提案 \cite{tang2020response}
+            \item 実際の実行時間のばらつきを考慮して \cite{park2021ros2} を改良し, ROS 2のスケジューリング機能をさらに探求 \cite{blass2021ros}
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{ROS 2 エグゼキュータの分析の既存研究1}
-    \begin{itemize}
-        \item Casiniは, ROS 2エグゼキュータの形式的モデリングと解析に関する最初の仕事を行い, シングルスレッドエグゼキュータのスケジューリング動作をモデル化し, その後の解析の基礎を築いた \cite{park2021ros2}
-        \item 応答時間分析技術を改善し, 応答時間を最適化するための優先度割り当て戦略を提案 \cite{tang2020response}
-        \item 実際の実行時間のばらつきを考慮して \cite{park2021ros2} を改良し, ROS 2のスケジューリング機能をさらに探求 \cite{blass2021ros}
-    \end{itemize}
-\end{frame}
+    \begin{frame}{ROS 2 エグゼキュータの分析の既存研究2}
+        \begin{itemize}
+            \item ROS 2フレームワークのための新しい優先度駆動型チェーンアウェアスケジューラを提案し, 提案スケジューラのエンドツーエンドレイテンシ分析を実施 \cite{choi2021picas}
+            \item ROSLlama を導入し, エンドツーエンドレイテンシを制御するために既存のリアルタイムメカニズムを使用し, ランタイムに必要な全てのスケジューリングパラメータを自動的に推定 \cite{blass2021automatic}
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{ROS 2 エグゼキュータの分析の既存研究2}
-    \begin{itemize}
-        \item ROS 2フレームワークのための新しい優先度駆動型チェーンアウェアスケジューラを提案し, 提案スケジューラのエンドツーエンドレイテンシ分析を実施 \cite{choi2021picas}
-        \item ROSLlama を導入し, エンドツーエンドレイテンシを制御するために既存のリアルタイムメカニズムを使用し, ランタイムに必要な全てのスケジューリングパラメータを自動的に推定 \cite{blass2021automatic}
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{ROS 2 エグゼキュータの分析の既存研究との比較}
-    全ての既存研究は, シングルスレッドエグゼキュータの分析に重点を置いている
-\end{frame}
+    \begin{frame}{ROS 2 エグゼキュータの分析の既存研究との比較}
+        全ての既存研究は, シングルスレッドエグゼキュータの分析に重点を置いている
+    \end{frame}
 
 
-\begin{frame}{処理チェーンの分類}
-    \begin{itemize}
-        \item チェーンには主に以下の 2 つに分類される
-              \begin{itemize}
-                  \item チェーン内のタスクが個別にトリガされるデータチェーン
-                  \item タスクが先行タスクによってトリガされるトリガチェーン
-              \end{itemize}
-        \item 広い意味で, 本論文で検討している ROS 2 エグゼキュータの処理チェーンはトリガチェーンのカテゴリに属す
-    \end{itemize}
-\end{frame}
+    \begin{frame}{処理チェーンの分類}
+        \begin{itemize}
+            \item チェーンには主に以下の 2 つに分類される
+                  \begin{itemize}
+                      \item チェーン内のタスクが個別にトリガされるデータチェーン
+                      \item タスクが先行タスクによってトリガされるトリガチェーン
+                  \end{itemize}
+            \item 広い意味で, 本論文で検討している ROS 2 エグゼキュータの処理チェーンはトリガチェーンのカテゴリに属す
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{トリガチェーンの分析の既存研究}
-    \begin{itemize}
-        \item トリガチェーンの応答時間を分析するための最も一般的なフレームワークの 2 つは, 構成パフォーマンス分析 \cite{henia2005system} とリアルタイム微積分 \cite{chakraborty2003general} であり, これらに基づいて \cite{schlatow2016response} は, 同期通信と非同期通信を使用する一連のスレッドの応答時間を計算した
-        \item 複数のプロセッサを横断するトリガチェーンのエンドツーエンドレイテンシを最適化 \cite{schliecker2009recursive}
-    \end{itemize}
-\end{frame}
+    \begin{frame}{トリガチェーンの分析の既存研究}
+        \begin{itemize}
+            \item トリガチェーンの応答時間を分析するための最も一般的なフレームワークの 2 つは, 構成パフォーマンス分析 \cite{henia2005system} とリアルタイム微積分 \cite{chakraborty2003general} であり, これらに基づいて \cite{schlatow2016response} は, 同期通信と非同期通信を使用する一連のスレッドの応答時間を計算した
+            \item 複数のプロセッサを横断するトリガチェーンのエンドツーエンドレイテンシを最適化 \cite{schliecker2009recursive}
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{スケジューリングアルゴリズムの既存研究}
-    マルチプロセッサ上のシーケンシャルリアルタイムタスクの従来のノンプリエンプティブスケジューリングについて以下の研究がある
-    \begin{itemize}
-        \item EDF でスケジュールされた周期的タスクに対して, 十分ではあるが必須ではない多項式時間のスケジューラビリティテスト条件を提案した \cite{baruah2006non}
-        \item EDF の下で線形時間の複雑さを備えた新しい十分なテストを提案し, EDF と FP スケジューリングの疑似多項式の時間複雑性の改善されたテスト条件を提示 \cite{guan2008new}
-    \end{itemize}
-\end{frame}
+    \begin{frame}{スケジューリングアルゴリズムの既存研究}
+        マルチプロセッサ上のシーケンシャルリアルタイムタスクの従来のノンプリエンプティブスケジューリングについて以下の研究がある
+        \begin{itemize}
+            \item EDF でスケジュールされた周期的タスクに対して, 十分ではあるが必須ではない多項式時間のスケジューラビリティテスト条件を提案した \cite{baruah2006non}
+            \item EDF の下で線形時間の複雑さを備えた新しい十分なテストを提案し, EDF と FP スケジューリングの疑似多項式の時間複雑性の改善されたテスト条件を提示 \cite{guan2008new}
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{上記既存研究との比較}
-    これらの全ての作業は, ROS 2 エグゼキュータの特定のスケジューリング機能を考慮していないため, 直接適用することはできない
-\end{frame}
+    \begin{frame}{上記既存研究との比較}
+        これらの全ての作業は, ROS 2 エグゼキュータの特定のスケジューリング機能を考慮していないため, 直接適用することはできない
+    \end{frame}
+}
